	* Merged the Autoprofile plugin into our build system.
	* Fixed convbadger's failure to update on conversation switch.
	* Added Ike Gingerich's colorize plugin
	* Added Ike Gingerich's splitter plugin
	* Fixed dewysiwygification's debug messages not properly ending lines.
	* Added google plugin for "I'm Feeling Lucky" searches.
	* Fixed aspell dependency in switchspell (fixes gentoo bug #196693)

Version 2.3.0: 03/17/08
	* Fixed a typo in irc-more's source that allowed a potential double-free
	* Fixed unregistering commands when unloading gRIM and Magic 8 ball plugin
	* Fixed napster plugin.  It builds cleanly and loads properly now.
	* Added /bollocks command to Magic 8 ball plugin inspired by (and ported
	  from) /dev/bollocks kernel module
	* Added Andrew Pangborn's Enhanced History plugin and ported it to the
	  Pidgin and libpurple APIs.  Cleaned up some preferences as well.
	* Dice plugin now supports dice notation
	  (http://en.wikipedia.org/wiki/Dice_notation), but it's not perfect yet.
	  (Lucas Paul)
	* Dice plugin now calls the /me command with its output.
	* Irc-more plugin adds notice support only when built against libpurple
	  older than 2.4.0.
	* Napster plugin now builds by default.
	* Removed the broadcast plugin.
	* Memory leak fixes
	* Fixed the --with-plugins configure argument.  It now correctly handles
	  all, default, and a comma separated list of plugins.
	* Fixed a crash in the xchat-chats plugin which occurs due to the changes
	  to the conversation window in 2.4.0.
	* Fixed a missing header include in the timelog plugin which caused a
	  plugin load failure under some circumstances.
	* Finally added some content to README

Version 2.2.0: 10/25/07
	* Added 'menuconfig' script to make it easier to select what plugins to
	  build.
	* Added support for initial setting/unsetting of user modes to irc-more
	* Added the abusive findip plugin
	* Added infopane plugin
	* Added dewysiwygification plugin